; ModuleID = '/home/carl/AnghaBench/jq/src/extr_lexer.c_enter.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_lexer.c_enter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IN_PAREN = common dso_local global i32 0, align 4
@IN_BRACKET = common dso_local global i32 0, align 4
@IN_BRACE = common dso_local global i32 0, align 4
@IN_QQINTERP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @enter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @enter(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %4, align 4
  switch i32 %8, label %17 [
    i32 40, label %9
    i32 91, label %11
    i32 123, label %13
    i32 128, label %15
  ]

9:                                                ; preds = %3
  %10 = load i32, i32* @IN_PAREN, align 4
  store i32 %10, i32* %7, align 4
  br label %17

11:                                               ; preds = %3
  %12 = load i32, i32* @IN_BRACKET, align 4
  store i32 %12, i32* %7, align 4
  br label %17

13:                                               ; preds = %3
  %14 = load i32, i32* @IN_BRACE, align 4
  store i32 %14, i32* %7, align 4
  br label %17

15:                                               ; preds = %3
  %16 = load i32, i32* @IN_QQINTERP, align 4
  store i32 %16, i32* %7, align 4
  br label %17

17:                                               ; preds = %3, %15, %13, %11, %9
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @assert(i32 %18)
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @yy_push_state(i32 %20, i32 %21)
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @yy_push_state(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
